todo: talk about the bocksteins controlling BP –> HFp

--- a/finite.tex
+++ b/finite.tex
@@ -1087,6 +1087,8 @@ These maps are guaranteed by very careful study of Adams spectral sequences.
 
 They therefore conclude the strongest possible positive response to Ravenel's conjectures.  Not only can we continue the sequence \[\S, \; \S/p, \; \S/(p, v), \; \ldots,\] but in fact \emph{any} finite spectrum admits an (essentially unique) interesting periodic self-map.  This is maybe the most remarkable of the statements: although Nishida's theorem initially led us to think of periodic self-maps as rare, they are in fact ubiquitous.  Additionally, we learned that the shift\footnote{This is sometimes referred to as the ``wavelength'' in the chromatic analogy.} of this self-map is determined by the first nonvanishing $K(d)$--homology, giving an effective detection tool.  Finally, all such periodicity shifts arise: for any $d$, there is a spectrum admitting a $v_d$--self--map but not a $v_{d-1}$--self--map.
 
+\todo{In either this section, near the definition of chromatic homology theories, or in the next section, where the acyclicity of $K(d) \sm K(d')$ is stated, we should discuss $H\F_p{}_* BP$ (perhaps in terms of $H\F_p{}_* MU$ but certainly in terms of a quotient algebra of the dual Steenrod algebra), as well as the utility of the Adams spectral sequence in computing extraordinary homology theories from ordinary ones, and the role that Bocksteins play in those calculations (and, in particular, where all the $\tau_j$ operators went in the deformation from $H\F_p$ to $BP$).}
+
 
 
 
