note on broken tikzcd arrow style

--- a/preamble.tex
+++ b/preamble.tex
@@ -28,6 +28,7 @@
     iso'/.style="\cong"{/utils/exec=\isop@which,#1},
     equiv/.style="\simeq"{#1},
     equiv'/.style="\simeq"{/utils/exec=\isop@which,#1},
+    % XXX: equal really breaks if you pair it with leftarrow.
     equal/.style={double distance=2pt,-}
 }
 
