--- a/hinfty.tex
+++ b/hinfty.tex
@@ -11,6 +11,8 @@ HOMOLOGY THEORIES seems like a nice place to learn about these things. He advert
 
 \todo{Charles's Sections 2.10,12 of the Felix Klein notes has a nice, compact exposition of power operations for $K(n)$--local $E_\infty$--ring spectra (using, in particular, $R^{B\Sigma_m} \simeq R \sm_E E^{B\Sigma_m}$) as well as a discussion of ``descent for isogenies'' generally and Koszul-ality in Section 3.}
 
+\todo{Don Davis has a \textit{Handbook of Algebraic Topology} chapter on unstable $v_1$--periodic homotopy of spheres.}
+
 
 \begin{center}
 \textbf{\Large This is completely under construction.}
