reference to akhil’s MO post

--- a/finite.tex
+++ b/finite.tex
@@ -888,6 +888,7 @@ I drew an approximation to this picture by hand in \texttt{other resources}.  I 
 \todo{The bottom of COCTALOS page 68 has a better interpretation of what picking a formal group law lifting a flat map to $\moduli{fg}$ has to do with anything.  It probably belongs in this Lecture.}
 \todo{Much of this section is written graded-ly.  I guess we still haven't decided whether this is the right presentation.}
 \todo{Danny has been nervous lately about the LEFT yielding module spectra and ring spectra. It would be good to write out how LEFT applied to a sheaf of rings gives a ring spectrum.}
+\todo{Akhil says some nice things about nilpotence and periodicity here: http://mathoverflow.net/questions/116663/connection-of-xn-spectra-to-formal-group-laws . The discussion of vanishing lines could be included here. The moral indication that nilpotence is the geometric link between stable homotopy and the moduli of formal groups also seems like an important point to be made here.}
 
 
 With our analysis of $\moduli{fg}$ complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor $\context{MU}(-)$.  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
