--- a/finite.tex
+++ b/finite.tex
@@ -228,7 +228,7 @@ In \Cref{DescentFromHFpToHZp}, we discussed translating from the algebra descent
 \end{remark}
 
 \begin{example}
-Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $H\F_2P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  This grants us access to a description of the context for $H\F_2$: \[\context{H\F_2P} = \Spec F_2 \mmod \InternalAut{\G_a}.\]
+Most of the homology theories we will discuss have these {\CH} and {\FH} properties.  For an easy example, $H\F_2P$ certainly has this property: there is only one possible algebraic map $\F_2 \to \mathcal A_*$, so {\FH} is necessarily satisfied.  This grants us access to a description of the context for $H\F_2$: \[\context{H\F_2P} = \Spec \F_2 \mmod \InternalAut{\G_a}.\]
 \end{example}
 
 \begin{example}\label{ContextOfMUPExample}
