remember to define the unstable context

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -202,7 +202,7 @@ and the computation above presents $\Spec \mathcal A_*$ as the open subscheme of
 Some of the complexity here was eliminated by the smallness of $\Spec H\F_2{}_*$.  For a general ring spectrum $E$, we also have to account for $\Spec E_*$, but the end result is similar to that of \Cref{FHGivesComodules}:
 \todo{Consider elaborating on how $Q^*$ does not give a Hopf algebroid because it's missing a version of $\chi$ for $\circ$--multiplication.  It's kind of remarkable that inverting the homology suspension element automatically produces such a $\chi^{\circ}$.}
 \begin{lemma}
-For a ring spectrum $E$ satisfying {\UFH}, the additive unstable cooperations form rings of functions on the objects and morphisms of a category scheme, and homology is valued in Cartesian quasicoherent sheaves over its nerve. \qed
+For a ring spectrum $E$ satisfying {\UFH}, the additive unstable cooperations form rings of functions on the objects and morphisms of a category scheme $\Ucontext{E}$, and the $E$--homology of a space $X$ forms a Cartesian quasicoherent sheaf $\Ucontext{E}(X)$ over its nerve. \qed
 \end{lemma}
 
 Although it seems like we have lost a lot of information in passing to $\ast$--indecomposables, it is a classical observation that in many cases this is actually enough to recover everything.  
@@ -227,6 +227,8 @@ If $E$ satisfies {\UGH} and $X$ is a space with $E_* X = SN$ for some connective
 \begin{proof}
 Under {\UGH}, we have a factorization \[\CatOf{Coalgebras}_{G}(E_* S^t, -) = \CatOf{Comodules}_{U}(E_* S^t, Q^*(-))\] and the injective objects intertwine to give a composite functor spectral sequence \[E_2^{r, s} = \Ext^r_{\CatOf{Coalgebras}_U}(E_* S^t, R^s_{\CatOf{Coalgberas}_G} Q^*(M)) \Rightarrow \Ext^{r+s}_{\CatOf{Coalgebras}_G}(E_* S^t, M).\]  If $M = E_* X = SN$ for some connective free $E_*$--module $N$, then $R^{q > 0}_{\CatOf{Coalgebras}_G} Q^*(E_* X) = 0$, the composite functor spectral sequence collapses, and $\Ext^s_{\CatOf{Coalgebras}_U}(E_* S^t, Q^* E_* X)$ computes the unstable Adams $E_2$--term as claimed.
 \end{proof}
+
+\todo[inline]{Reinterpret this $\Ext$ group as some kind of sheaf cohomology.  Don't forget the goal of having a residual $\Gm$--action (or whatever) to distinguish the grading.}
 
 
 
