--- a/unknowns.tex
+++ b/unknowns.tex
@@ -407,7 +407,7 @@ To get $KO$ into this picture, use the Tate trick \[K \sm KO \simeq K \sm (K^{hC
 Now need to show that there exist sequences of $p$--adic integers satisfying the criteria from the preceding summary.
 
 \begin{theorem}[Mazur]
-For any auxiliary $c \in \Z_p^\times$, there is a homomorphism $f_c$ such that $f_c(x^{k \ge 1}) = \frac{-B_k}{k}(1 - p^{k-1})(1 - c^k)$ (and $\int_{\Z_p^\times} d\mu_c = \frac{1}{p} \log(c^{p-1})$).\footnote{\[\text{Explicitly,\;} f_c(h) = \int_{\Z_p^\times} h(x) d\mu_c = \lim_{r \to \infty} \frac{1}{p^r} \sum_{\substack{0 \le i < p^r \\ p \nmid i}} \int_i^{ci} \frac{h(t)}{t} dt,.\]} (With considerable effort, this can be halved.)
+For any auxiliary $c \in \Z_p^\times$, there is a homomorphism $f_c$ such that $f_c(x^{k \ge 1}) = \frac{-B_k}{k}(1 - p^{k-1})(1 - c^k)$ (and $\int_{\Z_p^\times} d\mu_c = \frac{1}{p} \log(c^{p-1})$).\footnote{\[\text{Explicitly,\;} f_c(h) = \int_{\Z_p^\times} h(x) d\mu_c = \lim_{r \to \infty} \frac{1}{p^r} \sum_{\substack{0 \le i < p^r \\ p \nmid i}} \int_i^{ci} \frac{h(t)}{t} dt.\]} (With considerable effort, this can be halved.)
 \end{theorem}
 
 You might wonder why Mazur had already proven exactly the Theorem we needed.  To understand his program, recall these two facts about $\zeta$:
