--- a/unknowns.tex
+++ b/unknowns.tex
@@ -446,6 +446,8 @@ The transfer map from a dimension $n$ compact Lie group lies in Novikov filtrati
 
 It's not clear to me how the Miller invariant is computed in the $L_{K(1)} \tmf$ case.  It seems like their game is to use the cover $L_{K(1)} \tmf \to K^{\Tate}$ and the classical $\sigma$--orientation there, then deduce the effect on homotopy in $L_{K(1)} \tmf$ by some kind of injectivity statement.  I don't understand how $K^{\Tate}$ is already understood to be an $E_\infty$ ring, though, or how the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$ is understood to be even an $A_\infty$--orientation (which I think you need in order to compute the Miller invariant).  There's an interesting accompanying thought: you can probably also construct $K\ps{q}$ as an $E_\infty$ ring with underlying homotopy ring spectrum the same as $K^{\Tate}$ but which carries an $E_\infty$ $MU$--orientation that factors as $MU \to K \to K\ps{q}$.  In turn, its Miller invariant is probably no more complicated than that of $K$.  It's remarkable that the $E_\infty$ ring structure already carries so much number theory internally, without reference to the existence of an $E_\infty$ orientation.
 
+\todo[inline]{Mike has some open questions about the end of this analysis (and in particular about the fiber of the Atkin map that appears in the $K(1)$--local analysis of $\tmf$, an analogue of the chromatic splitting fiber) at the end of his talk notes \textit{The $\String$ orientation of $\tmf$}.  Some of that should be copied here.}
+
 
 
 
