--- a/cooperations.tex
+++ b/cooperations.tex
@@ -871,6 +871,8 @@ To see this, note that because $E_{2n-2k-1} B(2n) \to D_{2n} H_* \OS{E}{2k+1}$ i
 
 \section{Cooperations and geometric points on \texorpdfstring{$\moduli{fg}$}{Mfg}}\label{CoopnsForMoravaKandHA}
 
+\todo{Theorem 8.1.3 of Ravenel-Wilson-Yagita says that the even collapse at $j = \infty$ was already known to them, and indeed it appears in Ravenel-Wilson Theorem 12.3 on page 743.}
+
 Throughout today, we will write $K$ for a Morava $K$--theory $K_\Gamma$ (which, if you like, you can take to be $K(d)$) and $A$ for a finitely generated abelian group, and $H$ for the associated Eilenberg--Mac Lane spectrum.  Our goal is to study the unstable mixed cooperations $K_* \OS{H}{*}$, which we expect to be connected to formal group homomorphisms $\Gamma \to \G_a$ but which isn't covered by any of the cases studied thus far.  This calculation is interesting to us for two reasons:
 \begin{enumerate}
 \item These cooperations appear naturally when pursuing a ``fiberwise analysis'' of cooperations, or a chromatic analysis of unstable homotopy theory, along the lines of \Cref{ChapterFiniteSpectra}.
