pointer to lurie’s survey for later

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -473,6 +473,13 @@ The Bousfield--Kuhn functor and the Rezk logarithm
 
 free $E_\infty$--orientations off of $MU$
 
+\todo{Section 5.3 of Lurie's Survey talks about a derived algebro-geometric perspective on the $\sigma$--orientation.}
+
+
+
+
+
+
 
 
 
