typo in Figure 4.1

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -93,7 +93,7 @@ A_{s, t} \otimes_{R_*} (A_{s', t'} \otimes_{R_*} A_{s'', t'}) \arrow{r}{1 \otime
 \bigoplus_{s_1 + s_2 = s} \left(A_{s_1 + s', t + t'} \otimes_{R_*} A_{s_2 + s'', t + t'}\right) \arrow{r}{\ast} & A_{s + s' + s'', t + t'}. \\
 \end{tikzcd}
 \end{center}
-\caption{The distributivity axiom for $\ast$ over $\circ$ in a Hopf algebra.}\label{DistributivityDiagram}
+\caption{The distributivity axiom for $\ast$ over $\circ$ in a Hopf ring.}\label{DistributivityDiagram}
 \end{figure}
 
 \begin{definition}[{\cite[Summary 10.46]{BJW}}]
