--- a/preface.tex
+++ b/preface.tex
@@ -14,7 +14,7 @@ Haynes Miller, Doug Ravenel, Steve Wilson --- the $BP$ mafia
 
 Jack Morava
 
-Nat Stapleton
+Nat Stapleton (and Charles Rezk, for the $H_\infty$ part)
 
 Martin Bendersky --- brief consultation about unstable cooperations
 
